version/0.16/_sources/api/solver/_autosummary/settings/multicomponent.rst.txt
:orphan:

.. _multicomponent:

multicomponent
==============

.. autoclass:: ansys.fluent.core.solver.settings_232.multicomponent.multicomponent
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`multicomponent_child <multicomponent_child>`


.. rubric:: Included in:

==========================================   =============================

Parent                                                             Summary

==========================================   =============================
:ref:`mass_diffusivity <mass_diffusivity>`       'mass_diffusivity' child.

==========================================   =============================

