version/0.20/_sources/api/solver/_autosummary/settings/multicomponent.rst.txt
:orphan:

.. _multicomponent:

multicomponent
==============

.. autoclass:: ansys.fluent.core.solver.settings_241.multicomponent.multicomponent
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`multicomponent_child <multicomponent_child>`


.. rubric:: Included in:

==========================================   =============================

Parent                                                             Summary

==========================================   =============================
:ref:`mass_diffusivity <mass_diffusivity>`       'mass_diffusivity' child.

==========================================   =============================

